# learn_cpp

./: .gitignore
project1/: CMakeLists.txt  main.cpp
project10_function/: CMakeLists.txt  main.cpp
project11_derectives/: CMakeLists.txt  main.cpp
project12_headers/: CMakeLists.txt  add.cpp  add.h  main.cpp
project13_fun_with_same_names/: CMakeLists.txt
project14_plog/: CMakeLists.txt  main.cpp
project14_static_cast/: CMakeLists.txt  main.cpp
project15_decimal_hex_binary_notation/: CMakeLists.txt  main.cpp
project16_ternary_operator/: CMakeLists.txt  main.cpp
project17_bitwise_operators/: CMakeLists.txt  main.cpp
project18_bit_mask/: CMakeLists.txt  main.cpp
project19_namespace/: CMakeLists.txt  foo.cpp  foo.h  goo.cpp  main.cpp
project2/: CMakeLists.txt  main.cpp
project20_internal_linkage/: CMakeLists.txt  foo.cpp  main.cpp
project21_external_linkage/: CMakeLists.txt  foo.cpp  main.cpp
project22_static_variable/: CMakeLists.txt  main.cpp
project3_types/: CMakeLists.txt  main.cpp
project4_sizeof/: CMakeLists.txt  main.cpp
project5_array_vectors/: CMakeLists.txt  main.cpp
project6_type_casting/: CMakeLists.txt  main.cpp
project7_switch_case/: CMakeLists.txt  main.cpp
project8_loop/: CMakeLists.txt  main.cpp
project9_string/: CMakeLists.txt  main.cpp
temp_task1/: CMakeLists.txt  main.cpp
temp_task2/: CMakeLists.txt  main.cpp
temp_task3/: CMakeLists.txt  main.cpp
temp_task4/: CMakeLists.txt  main.cpp
temp_task5/: CMakeLists.txt  main.cpp
temp_task6/: CMakeLists.txt  main.cpp
temp_task7/: CMakeLists.txt  main.cpp
(+9 files in other folders)
